--- a/css/matei-test-plugin.css
+++ b/css/matei-test-plugin.css
@@ -1,38 +1,3 @@
-p{
-            line-height: 25px !important;
-            letter-spacing: 25px !important;
-            color: #49bcb1 !important;       
-        }p{
-            line-height: 25px !important;
-            letter-spacing: 25px !important;
-            color: #4bc17a !important;       
-        }
-p{
-            line-height: 25px !important;
-            letter-spacing: 25px !important;
-            color: #6cd854 !important;       
-        }
-
-p{
-            line-height: 25px !important;
-            letter-spacing: 25px !important;
-            color: #6cd854 !important;       
-        }
-
-p{
-            line-height: 25px !important;
-            letter-spacing: 25px !important;
-            color: #266353 !important;       
-        }
-
-p{
-            line-height: 25px !important;
-            letter-spacing: 25px !important;
-            color: #e053cf !important;       
-        }
-
-p{
-            line-height: 25px !important;
-            letter-spacing: 25px !important;
-            color: #5798ed !important;       
-        }
+p {
+    font-size: 16px;
+}
