--- a/css/matei-test-plugin2.css
+++ b/css/matei-test-plugin2.css
@@ -1,11 +1,6 @@
-p {
-    line-height: 25px !important;
-    letter-spacing: 25px !important;
-    color: #256039 !important;
-}
 
-p {
-    line-height: 25px !important;
-    letter-spacing: 12px !important;
-    color: #103511 !important;
-}
+p{
+            line-height: 25px !important;
+            letter-spacing: 0 !important;
+            color: #356d89 !important;       
+        }
