--- a/css/matei-test-plugin2.css
+++ b/css/matei-test-plugin2.css
@@ -1,6 +1,6 @@
 
 p{
             line-height: 25px !important;
-            letter-spacing: 0 !important;
-            color: #356d89 !important;       
+            letter-spacing: 12px !important;
+            color: #5ae861 !important;       
         }
