--- a/View/admin.html
+++ b/View/admin.html
@@ -7,13 +7,13 @@
 <body>
 <h1>Test</h1>
 <div class="small-container" id="input-picker">
-<label>Line height: </label><br>
-<input type="number" name="line-height" id="line-height" required>
+<label class="test-label">Line height: </label><br>
+<input type="number" name="line-height" id="line-height" class="test-input" required>
 <br>
-<label> Letter spacing:</label> <br>
-<input type="number" name="letter-spacing" id="letter-spacing" required>
+<label class="test-label"> Letter spacing:</label> <br>
+<input type="number" name="letter-spacing" id="letter-spacing" class="test-input" required>
 <br>
-<label>Color picker:</label> <br>
+<label  class="test-label">Color picker:</label> <br>
 <input type="text" name="color" class="color-picker" value="#bada55" id="color" required/>
 <br>
 <br>
