--- a/css/matei-test-plugin2.css
+++ b/css/matei-test-plugin2.css
@@ -1,6 +1,6 @@
 
 p{
-            line-height: 25px !important;
+            line-height: 12px !important;
             letter-spacing: 12px !important;
-            color: #5ae861 !important;       
+            color: #924abf !important;       
         }
