--- a/css/matei-test-plugin2.css
+++ b/css/matei-test-plugin2.css
@@ -1,6 +1,6 @@
 
 p{
-            line-height: 12px !important;
-            letter-spacing: 12px !important;
-            color: #924abf !important;       
+            line-height: 35px !important;
+            letter-spacing: 83px !important;
+            color: #70422b !important;       
         }
