--- a/css/admin-test-plugin.css
+++ b/css/admin-test-plugin.css
@@ -59,7 +59,6 @@ h1 {
     width: 200px;
 }
 .ui-slider .ui-slider-handle {
-    height: 0;
-    width: 5px;
     padding-left: 5px;
+    cursor: e-resize;
 }
